versao-inicial - configurações mensagem da arquitetura - configuração-AppStartupRunner exectar comandos ao iniciar.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,6 @@ app.api.base=/api/${app.api.version}
 app.api.swagger.title=Faculdade Somos todos N&oacute;s API
 app.api.swagger.base-package=br.ueg.prog.webi.faculdade
 
-#springdoc.swagger-ui.enabled=true
-
 spring.datasource.url=jdbc:postgresql://localhost:5433/faculdade
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -22,3 +20,5 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 
 server.error.include-message=always
 server.error.include-stacktrace=never
+
+spring.messages.basename=messages,messages-arquitetura
