--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.0.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.ueg.prog.webi</groupId>
-	<artifactId>prog.webi.faculdade</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
-	<name>prog.webi.faculdade</name>
-	<description>Sistema de Faculdade Simples</description>
+	<groupId>br.ueg.aluno</groupId>
+  <artifactId>aplicacao01</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>aplicacao01</name>
+  <description>Exemplo de aplicação com projeto de arquitetura UEG Prog Web I</description>
 	<properties>
 		<java.version>17</java.version>
 		<lombok.version>1.18.26</lombok.version>
@@ -121,14 +121,14 @@
 					<target>17</target>
 					<annotationProcessorPaths>
 						<path>
-							<groupId>org.mapstruct</groupId>
-							<artifactId>mapstruct-processor</artifactId>
-							<version>${mapstruct.version}</version>
-						</path>
-						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 							<version>${lombok.version}</version>
+						</path>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${mapstruct.version}</version>
 						</path>
 						<path>
 							<groupId>org.projectlombok</groupId>
