--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-
 springdoc.version=v1
 app.api.version=v1
 app.api.base=/api/${app.api.version}
 app.api.swagger.title=Faculdade Somos todos N&oacute;s API
-app.api.swagger.base-package=br.ueg.prog.webi.faculdade
+app.api.swagger.base-package=br.ueg.aluno.aplicacao01
+
+spring.messages.basename=messages,messages-arquitetura
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/faculdade
 spring.datasource.username=postgres
@@ -11,14 +12,11 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+#Configuracoes apenas para desenvolvimento
 #para mostrar SQL
 spring.jpa.properties.hibernate.format_sql=true
 #para mostrar os parametros da sql
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
-
-
 server.error.include-message=always
 server.error.include-stacktrace=never
-
-spring.messages.basename=messages,messages-arquitetura
