FIX - Exemplo Criptografia senha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ app.api.version=v1
 app.api.base=/api/${app.api.version}
 app.api.swagger.title=Faculdade Somos todos N&oacute;s API
 app.api.swagger.base-package=br.ueg.prog.webi.faculdade
+app.api.security.url-auth-controller=/api/${app.api.version}/auth
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/faculdade
 spring.datasource.username=postgres
