--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ app.api.base=/api/${app.api.version}
 app.api.swagger.title=Faculdade Somos todos N&oacute;s API
 app.api.swagger.base-package=br.ueg.prog.webi.faculdade
 app.api.security.url-auth-controller=/api/${app.api.version}/auth
+#app.api.security.jwt.token-expire-in=3600
+#app.api.security.jwt.token-refresh-in=3600
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/faculdade
 spring.datasource.username=postgres
@@ -17,6 +19,11 @@ spring.jpa.properties.hibernate.format_sql=true
 #para mostrar os parametros da sql
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+# Set to enable hot deployment
+spring.devtools.restart.enabled=true
+# restart directory
+spring.devtools.restart.additional-paths=src/main/java
+spring.devtools.restart.exclude: WEB-INF/**
 
 
 server.error.include-message=always
