ADD - Modulo de administração

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 springdoc.version=v1
 app.api.version=v1
 app.api.base=/api/${app.api.version}
@@ -11,8 +10,12 @@ app.api.security.url-auth-controller=/api/${app.api.version}/auth
 spring.datasource.url=jdbc:postgresql://localhost:5433/faculdade
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+# create - cria as tabelas na inicializacao caso nao existam.
+# update - atualizacao o schema se necessario -- UTILIZAR ESSE METODO PARA PRIMEIRA EXECUCAO, DEPOIS VOLTAR PARA none
+# create-drop -- para apagar e recriar a base.
+# none -- para nao fazer nada
 
 #para mostrar SQL
 spring.jpa.properties.hibernate.format_sql=true
@@ -29,4 +32,6 @@ spring.devtools.restart.exclude: WEB-INF/**
 server.error.include-message=always
 server.error.include-stacktrace=never
 
-spring.messages.basename=messages,messages-arquitetura
+#TODO alteracao moduleadmin
+spring.messages.basename=messages,messages-arquitetura,messages-moduleadmin
+app.api.auth.url-redefinir-senha=http://localhost:4200/acesso/alterar-senha/
