--- a/pom.xml
+++ b/pom.xml
@@ -102,11 +102,37 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- https://medium.com/@ddwen/understanding-hot-deployment-and-hot-reloading-in-spring-boot-172c3a66d81a-->
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<optional>true</optional> <!-- Can prevent passing devtools dependencies into other modules -->
+			<optional>true</optional> &lt;!&ndash; Can prevent passing devtools dependencies into other modules &ndash;&gt;
+		</dependency>-->
+
+		<!--Dependências do Modulo de administração -moduleadmin -->
+		<!-- Report -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.9.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
+
+		<!-- ADD 02/09/2023 - para utilizar de ObjectMapper -->
+		<!--<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.14.2</version>
+		</dependency>-->
 	</dependencies>
 
 	<build>
@@ -151,5 +177,22 @@
 			</plugin>
 		</plugins>
 	</build>
+	<!--TODO alteração moduleadmin-->
+	<!-- para funcionar o jasper do projeto moduleadmin -->
+	<repositories>
+		<!-- JasperSoft, they modified a standard library for their own special needs -->
+		<repository>
+			<id>jaspersoft-third-party</id>
+			<url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<!-- JasperSoft, they modified a standard library for their own special needs -->
+		<pluginRepository>
+			<id>jaspersoft-third-party</id>
+			<url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 </project>
