--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ app.api.base=/api/${app.api.version}
 app.api.swagger.title=Faculdade Somos todos N&oacute;s API
 app.api.swagger.base-package=br.ueg.prog.webi.faculdade
 app.api.security.url-auth-controller=/api/${app.api.version}/auth
-#app.api.security.jwt.token-expire-in=3600
+app.api.security.jwt.token-expire-in=36000
 #app.api.security.jwt.token-refresh-in=3600
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/faculdade
@@ -16,6 +16,15 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # update - atualizacao o schema se necessario -- UTILIZAR ESSE METODO PARA PRIMEIRA EXECUCAO, DEPOIS VOLTAR PARA none
 # create-drop -- para apagar e recriar a base.
 # none -- para nao fazer nada
+
+#Configiuraçoes de paginação
+spring.data.web.pageable.size-parameter=size
+spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.default-page-size=20
+spring.data.web.pageable.one-indexed-parameters=false
+spring.data.web.pageable.max-page-size=2000
+spring.data.web.pageable.prefix=
+spring.data.web.pageable.qualifier-delimiter=_
 
 #para mostrar SQL
 spring.jpa.properties.hibernate.format_sql=true
