Logs para debug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,6 @@ server.error.include-stacktrace=never
 #TODO alteracao moduleadmin
 spring.messages.basename=messages,messages-arquitetura,messages-moduleadmin
 app.api.auth.url-redefinir-senha=http://localhost:4200/acesso/alterar-senha/
+
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
